2000-09-06  H.J. Lu  <hjl@gnu.org>

	* TODO: Add hardware watchpint problems on x86 OSes for 5.1.

2000-09-06  Kevin Buettner  <kevinb@redhat.com>

	* ia64-tdep.c (examine_prologue): Add rotating register rename
	support for the general registers.
	(ia64_get_saved_register): Add rotating register rename support
	for the predicate registers and the floating-point registers.

2000-09-05  Kevin Buettner  <kevinb@redhat.com>

	* config/arm/tm-linux.h (arm_linux_sigcontext_register_address,
	arm_linux_in_sigtramp): Declare.
	(IN_SIGTRAMP, SIGCONTEXT_REGISTER_ADDRESS): Define.
	* arm-tdep.c (SIGCONTEXT_REGISTER_ADDRESS): Define to be 0
	if not already defined by tm.h.
	(arm_scan_prologue): Don't assume that the prologue instructions
	will be in a contiguous clump.
	(arm_init_extra_frame_info): Add support for sigtramp frames.
	(arm_pc_is_thumb, arm_pc_is_thumb_dummy): Change type of
	`memaddr' from bfd_vma to CORE_ADDR.
	* arm-linux-tdep.c (gdbcore.h, frame.h): Include.
	(arm_pc_is_thumb): Declare.
	(arm_linux_skip_solib_resolver): Fix printf() statement.  [Which
	shouldn't be there anyway.]
	(ARM_LINUX_SIGRETURN_INSTR, ARM_LINUX_RT_SIGRETURN_INSTR): New
	defines.
	(arm_linux_in_sigtramp, arm_linux_sigcontext_register_address):
	New functions.

2000-09-05  Kevin Buettner  <kevinb@redhat.com>

	* i386aix-nat.c (fetch_core_registers): Protoize.
	* hpux-thread.c (hpux_thread_xfer_memory): Protoize.

2000-09-06  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c (m68hc11_frame_chain): Check for pc in call dummy.
	(m68hc11_guess_from_prologue): 'des' instruction to allocate 1 byte
	on the stack can appear in the prologue.
	
2000-09-05  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* sol-thread.c (ps_pdmodel): Protect with an ifdef.

Mon Sep  4 16:21:31 2000  Andrew Cagney  <cagney@amy.cygnus.com>

	* gdbarch.sh: Use printf instead of echo.
 	(do_read): During read, pad ``::'' with spaces and then strip out
 	those spaces.  Avoid problems with IFS=:.
