@@ -53,14 +53,6 @@
 extern int arm_in_call_stub (CORE_ADDR pc, char *name);
 extern CORE_ADDR arm_skip_stub (CORE_ADDR pc);
 
-/* Function to determine whether MEMADDR is in a Thumb function.  */
-extern int arm_pc_is_thumb (bfd_vma memaddr);
-
-/* Function to determine whether MEMADDR is in a call dummy called from
-   a Thumb function.  */
-extern int arm_pc_is_thumb_dummy (bfd_vma memaddr);
-
-
 #undef  IN_SIGTRAMP
 #define IN_SIGTRAMP(pc, name) 0
 
